--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 <body>
 <header><img src="pngwave.png">
 <h1>Wintersport</h1>
+<ul>
+      <li><a href="#">..........</a></li>
+      <li><a href="#">..........</a></li>
+      <li><a href="#">..........</a></li>
+    </ul>
 </body>
 </html>
