--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+<link href="/pngwave.png/normalize.css" rel="stylesheet">
+<style>
+header{text-align: center;
+}
+ul {
+  padding: 10px;
+}
+</style>
 </head>
 
 <body>
