--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
-header{text-align: center;
-}
-ul {
-  padding: 10px;
-}
+header{text-align: center;}
+ul { padding: 10px;}
+li {display: inline;}
 </style>
 </head>
 
