--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 header{text-align: center;}
 ul { padding: 10px;}
-li {display: inline;}
+li {display: inline;padding: 0px 10px 0px 10px;}
 </style>
 </head>
 
