--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
-header{text-align: center;}
-ul { padding: 10px;}
-li {display: inline;padding: 0px 10px 0px 10px;}
+  text-align: center;
+  background: url("http://dash.ga.co/assets/jeff-bg.png");
+  background-size: cover;
+  color: white;
+  }
+  a {color: white;
+  }
+  h1 {
+    font-size: 70px;
+      }
+ul { 
+  padding: 10px;
+}
+li {
+  display: inline;
+padding: 0px 10px 0px 10px;
+}
 </style>
 </head>
 
