--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
+  header{
   text-align: center;
-  background: url("IMG-6674.jpg");
+  background: url("http://dash.ga.co/assets/jeff-bg.png");
   background-size: cover;
   color: white;
   }
@@ -11,7 +12,7 @@
   }
   h1 {
     font-size: 70px;
-      }
+  }
 ul { 
   padding: 10px;
 }
