--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   header{
   text-align: center;
-  background: url("http://dash.ga.co/assets/jeff-bg.png");
+  background: url("IMG-6674.jpg");
   background-size: cover;
   color: white;
   }
