--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   header{
   text-align: center;
   background: url("IMG-6674.jpg");
-  background-size: cover;
+  background-size: 1000px;
   color: white;
   }
   a {color: white;
@@ -17,7 +17,7 @@
     margin: 40px 0px 0px 0px;
   }
 ul { 
-  padding: 10px;
+  padding: 20px;
 }
 li {
   display: inline;
