--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   header{
   text-align: center;
   background: url("IMG-6674.jpg");
-  background-size: 1200px;
+  background-size: cover;
   color: white;
   }
   a {color: white;
