--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   }
    img {
     margin: 40px 0px 0px 0px;
+    border: 7px solid black;
+    border-radius: 20px;
   }
 ul { 
   padding: 20px;
