--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
    img {
     margin: 40px 0px 0px 0px;
-    border: 7px solid yellow;
+    border: 7px solid black;
     border-radius: 20px;
   }
 ul { 
