--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@ padding: 0px 10px 0px 10px;
 <header><img src="pngwave.png">
 <h1>Wintersport</h1>
 <ul>
-      <li><a href="#">..........</a></li>
-      <li><a href="#">..........</a></li>
-      <li><a href="#">..........</a></li>
+      <li><a href="#">Introductie</a></li>
+      <li><a href="#">Frankrijk</a></li>
+      <li><a href="#">Oostenrijk</a></li>
+      <li><a href="#">Zwitserland</a></li>
+      <li><a href="#">Italië</a></li>
     </ul>
 </body>
 </html>
