--- a/index.html
+++ b/index.html
@@ -39,5 +39,18 @@ padding: 0px 10px 0px 10px;
       <li><a href="#">Zwitserland</a></li>
       <li><a href="#">Italië</a></li>
     </ul>
+  </header>
+<article>
+  <h2>Introductie</h2>
+  <p> .....................................</p>
+  </article>
+  <article>
+  <h2>Frankrijk</h2>
+  <p> .....................................</p>
+ </article>
+  <article>
+  <h2>FOosterijk</h2>
+  <p> .....................................</p>
+ </article>
 </body>
 </html>
