--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ li {
   display: inline;
 padding: 0px 10px 0px 10px;
 }
+article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
 </style>
 </head>
 
