--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@ article {
       padding: 20px;
       margin: 0 auto;
     }
+   @media (max-width: 500px) {
+      body {
+        background: yellow;
+      }
+    }
 </style>
 </head>
 
