--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@ article {
       padding: 20px;
       margin: 0 auto;
     }
-   @media (max-width: 500px) {
-      body {
-        background: yellow;
+  @media (max-width: 500px) {
+      h1 {
+        font-size: 36px;
+      }
+      li {
+        display: block;
+        padding: 5px;
       }
     }
 </style>
