--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ padding: 0px 10px 0px 10px;
 article {
       max-width: 500px;
       padding: 20px;
-      margin: 0 auto;
+      margin: 40px 0px 0px 0px;
     }
   @media (max-width: 500px) {
       h1 {
