--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@ article {
   <p> .....................................</p>
  </article>
   <article>
-  <h2>FOosterijk</h2>
+  <h2>Oostenrijk</h2>
   <p> .....................................</p>
  </article>
+   <script>
+  $("Oostenrijk").on("click", function() {
+  alert("clicked!")
+  });
+  </script>
 </body>
 </html>
