--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ article {
   <p> .....................................</p>
  </article>
    <script>
-  $("Oostenrijk").on("click", function() {
+  $("h2").on("click", function() {
   alert("clicked!")
   });
   </script>
