--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ article {
   <p> .....................................</p>
  </article>
    <script>
-  $("h2").on("click", function() {
+ alert("Javascript works!")
+  $("button").on("click", function() {
   alert("clicked!")
   });
   </script>
