--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ article {
    <script>
  alert("Javascript works!")
   $("button").on("click", function() {
-  alert("clicked!")
+  alert("a button was clicked!")
   });
   </script>
 </body>
