--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ article {
   <article>
   <h2>Oostenrijk</h2>
   <p> .....................................</p>
+  <h2>Zwitserland</h2>
+  <p> .....................................</p>   
+  <h2>Italië</h2>
+  <p> .....................................</p>
  </article>
    <script>
  alert("Javascript works!")
