--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@ article {
   <article>
   <h2>Oostenrijk</h2>
   <p> .....................................</p>
+  </article> 
+  <article>  
   <h2>Zwitserland</h2>
-  <p> .....................................</p>   
+  <p> .....................................</p>
+  </article>
+  <article>
   <h2>Italië</h2>
   <p> .....................................</p>
  </article>
