--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ article {
       max-width: 500px;
       padding: 20px;
       margin: 40px 0px 0px 0px;
+      font-size: 25px;
     }
   @media (max-width: 500px) {
       h1 {
