--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ padding: 0px 25px 0px 25px;
 }
 article {
       max-width: 600px;
-      padding: 20px;
+      padding: 5px 0px 100px;
       margin: 100px 0px 0px 0px;
       font-size: 20px;
     }
