--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ padding: 0px 25px 0px 25px;
 }
 article {
       max-width: 600px;
-      padding: 5px 0px 100px;
-      margin: 100px 0px 0px 0px;
+      margin: 0px 0px 200px 0px;
+      padding: 20px 0p;
       font-size: 20px;
     }
   @media (max-width: 500px) {
