--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ li {
 padding: 0px 25px 0px 25px;
 }
 article {
+  img src {
+    margin: 50px 0px 0px 500px;
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
