--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ article {
   img src {
     margin: 50px 0px 0px 500px;
   }
+  background {
+    color: black;
+  }
     }
   @media (max-width: 500px) {
       h1 {
