--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ article {
   img src {
     margin: 50px 0px 0px 500px;
   }
-  background {
-    color: black;
-  }
+ body {
+      background-color: black;
+      background-position: 10px 50px;
+      color: white;
     }
   @media (max-width: 500px) {
       h1 {
