--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ article {
   }
  body {
       background-color: black;
-      background-position: 10px 50px;
+      background-size: cover;
       color: white;
     }
   @media (max-width: 500px) {
