--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@ article {
   </article>
   <article>
   <h2>Frankrijk</h2>
-  <p> .....................................</p>
+  <p>Wintersport in Frankrijk staat bekend als een gebied voor de gevorderde skiër of snowboarder. Bovendien liggen de skigebieden een stuk hoger dan in vergelijkbare landen. In Frankrijk vind je voornamelijk lange afdalingen waar je lekker een stukje door kan skiën. De liften zijn gemiddeld minder nieuw dan in Oostenrijk maar dit zal je ook in de prijs van een ski pas terug zien, alhoewel de gemiddelde prijs van een skipas in Frankrijk ook zeker niet laag ligt. Als je naar Frankrijk gaat weet je eigenlijk wel zeker dat er genoeg sneeuw ligt dat komt doordat de skigebieden voornamelijk hooggelegen zijn. Mensen die kiezen om naar Frankrijk te gaan zijn vaak wel iets gevorderden, je hebt natuurlijk ook beginnerspistes maar die vind je meer in Oostenrijk. Als je voor de après-ski op wintersport gaat dan is Frankrijk niet de juiste bestemming voor jouw niet omdat het er niet is maar er zijn landen die dit veel meer hebben. In de Franse skigebieden vind je vaak kleine dorpjes op de piste terug zoals in Les Arcs 1600, Les Arcs 1700, Les Arcs 1950 en zelfs Les Arcs 2000.  
+</p>
  </article>
   <article>
   <h2>Oostenrijk</h2>
-  <p> .....................................</p>
+  <p>In Oostenrijk vinden ze het skiën belangrijk maar de après-ski misschien nog belangrijker. Je vindt in geen ander land een betere après-ski dan in Oostenrijk, van de kleine bars naar de grote clubs in Oostenrijk overal is het gezellig. Als je als nederlander gaat après-skiën in Oostenrijk dan zul je niet de enige zijn in elke bar zijn de helft van de mensen nederlands en wordt er volop nederlandstalige muziek gedraaid. Maar overdag moet er natuurlijk wel geskied worden en dat is zeker niet minder leuk dan de après-ski. In Oostenrijk zijn de skigebieden minder groot dan in Frankrijk je hebt namelijk kleinere afdalingen en moet vaker met de lift. De liften in Oostenrijk zijn wel van hoge kwaliteit maar dat mag ook wel als je kijkt wat je voor een skipas betaalt. Maar met een skipas in Oostenrijk kan je vaak wel naar omliggende gebieden dat maakt je ski ervaring veel diverser. Doordat de skigebieden gemiddeld iets lager liggen is de sneeuwzekerheid nog onzeker het hangt er echt vanaf in welke periode je gaat, maar als er de laatste tijd weinig sneeuw is gevallen hebben ze gelukkig genoeg nepsneeuw om dat gat op te vullen. Qua verblijf heb je in Oostenrijk wel heel veel leuke chalets, maar door die leuke chalets is er niet al te veel plaats en wordt dit vaak volgeboekt je moet er dus vroeg bij zijn.
+</p>
   </article> 
   <article>  
   <h2>Zwitserland</h2>
