--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ article {
       <li><a href="#">Italië</a></li>
     </ul>
   </header>
+  <div> 
+    div{
+    width: 300px;
+    height: 200px;
+    background-color: green;
+    }
+  </div>
 <article>
   <img src="Screenshot 2020-07-06 at 01.34.10.png">
   <h2>Introductie</h2>
