--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ article {
   ul {
     font-size: 20px;
   }
+   article{
+    width: 300px;
+    height: 200px;
+    background-color: green;
+    }
 </style>
 </head>
 
@@ -65,13 +70,6 @@ article {
       <li><a href="#">Italië</a></li>
     </ul>
   </header>
-  <div> 
-    div{
-    width: 300px;
-    height: 200px;
-    background-color: green;
-    }
-  </div>
 <article>
   <img src="Screenshot 2020-07-06 at 01.34.10.png">
   <h2>Introductie</h2>
