--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ article {
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      background-color: green;
   img src {
     margin: 50px 0px 0px 500px;
   }
