--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@ li {
   display: inline;
 padding: 0px 25px 0px 25px;
 }
-article(1) {
+article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
   }
- 
+ article(1) {
+   max-width: 60px;
+      margin: 50px 0px 200px 50px;
+      padding: 20px 0p;
+      font-size: 20px;
+      background-color: green;
+  }
+   
 
   @media (max-width: 500px) {
       h1 {
