--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ article {
 <header><img src="pngwave.png">
 <h1>Wintersport</h1>
 <ul>
-      <li><a href="#">Introductie</a></li>
+      <li><a href="Introductie.html">Introductie</a></li>
       <li><a href="#">Frankrijk</a></li>
       <li><a href="#">Oostenrijk</a></li>
       <li><a href="#">Zwitserland</a></li>
