--- a/Introductie.html
+++ b/Introductie.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+<style>
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      </style>
 </head>
 <body>
 <article>
