--- a/Introductie.html
+++ b/Introductie.html
@@ -6,6 +6,14 @@ article {
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+     li {
+        display: block;
+        padding: 5px;
+      }
+    }
+  ul {
+    font-size: 20px;
+  }
       </style>
 </head>
 <body>
