--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ article {
 <h1>Wintersport</h1>
 <ul>
       <li><a href="Introductie.html">Introductie</a></li>
-      <li><a href="#">Frankrijk</a></li>
+      <li><a href="#">Frankrijk.html</a></li>
       <li><a href="#">Oostenrijk</a></li>
       <li><a href="#">Zwitserland</a></li>
       <li><a href="#">Italië</a></li>
