--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ article {
 <h1>Wintersport</h1>
 <ul>
       <li><a href="Introductie.html">Introductie</a></li>
-      <li><a href="#">Frankrijk.html</a></li>
-      <li><a href="#">Oostenrijk</a></li>
-      <li><a href="#">Zwitserland</a></li>
-      <li><a href="#">Italië</a></li>
+      <li><a href="Frankrijk.html">Frankrijk</a></li>
+      <li><a href="Oostenrijk.html">Oostenrijk</a></li>
+      <li><a href="Zwitserland.html">Zwitserland</a></li>
+      <li><a href="Italië.html">Italië</a></li>
     </ul>
   </header>
 <article>
