--- a/Zwitserland.html
+++ b/Zwitserland.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<style>
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
@@ -10,7 +10,7 @@ article {
  ul {
     font-size: 20px;
   }
-
+</style>
 </head>
 <body>
 <article>  
