--- a/Introductie.html
+++ b/Introductie.html
@@ -18,7 +18,7 @@ article {
 </head>
 <body>
       <ul>
-            <li><a href="index.html.html">Terug naar hoofdpagina</a></li>
+            <li><a href="index.html">Terug naar hoofdpagina</a></li>
     </ul>
 <article>
   <h2>Introductie</h2>
