--- a/Introductie.html
+++ b/Introductie.html
@@ -18,10 +18,10 @@ article {
 </head>
 <body>
       <ul>
-            <li><a href="https://bram21.github.io/index.html.">Terug naar hoofdpagina</a></li>
+            <li><a href="https://bram21.github.io/index.html">Terug naar hoofdpagina</a></li>
     </ul>
 <article>
-  <h2>Introductie jopie</h2>
+  <h2>Introductie</h2>
   <p>Wil je ook altijd op wintersport maar weet je nooit welk land het beste bij jouw past, dan zit je op deze website goed. op deze webpagina licht ik de belangrijkste punten bij een wintersport toe, dus van sneeuwzekerheid naar apres-ski maar ook van de drukte op de piste naar prijs/kwaliteit. Deze punten pas ik toe op de vier belangrijkste wintersport landen in Europa, namelijk: Frankrijk, Oostenrijk, Zwitserland en Italië.</p>
   </article>
 </body>
