--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <style>
-      header {
-      size: cover; 
-          margin: 0px 0px 0px 900px;
-      }
+     header{
+  background: url("Les Arcs 2000.jpeg");
+  background-size: cover;
+  }
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
