--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -1,12 +1,10 @@
 <html>
 <head>
 <style>
-  background: url("Les Arcs 2000.jpeg");
-  background-size: cover;
 article {
-      max-width: 600px;
-      margin: 50px 0px 200px 50px;
-      padding: 20px 0p;
+      text-max-width: 600px;
+      text-margin: 50px 0px 200px 50px;
+      text-padding: 20px 0p;
       font-size: 20px;
       background: url("Les Arcs 2000.jpeg");
   background-size: cover;
