--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -7,7 +7,7 @@ article {
       text-padding: 20px 0p;
       font-size: 20px;
       background: url("Les Arcs 2000.jpeg");
-  background-size: cover;
+  background-size: contain;
 }
  ul {
     font-size: 20px;
