--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -2,14 +2,16 @@
 <head>
 <style>
 article {
-      text-max-width: 600px;
-      text-margin: 50px 0px 200px 50px;
-      text-padding: 20px 0p;
+      max-width: 600px;
+      margin: 50px 0px 200px 50px;
+      padding: 20px 0p;
       font-size: 20px;
+      }
+article {
       background: url("Les Arcs 2000.jpeg");
   background-size: contain;
-}
- ul {
+      }
+      ul {
     font-size: 20px;
   }
 </style>
