--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -9,7 +9,7 @@ article {
       }
 article {
       background: url("Les Arcs 2000.jpeg");
-  background-size: contain;
+  background-size: cover;
       }
       ul {
     font-size: 20px;
