--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -1,15 +1,15 @@
 <html>
 <head>
 <style>
+      html {
+            background: url("Les Arcs 2000.jpeg");
+  background-size: cover;
+      }
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
-      }
-article {
-      background: url("Les Arcs 2000.jpeg");
-  background-size: cover;
       }
       ul {
     font-size: 20px;
