--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-<style>     
+<style>    
+      html{
+            background: url("Les Arcs 2000.jpeg");
+  background-size: 50%;
+      }
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
