--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -2,7 +2,7 @@
 <head>
 <style>    
       html{
-       img src="Les Arcs 2000.jpeg"
+       img src="Les Arcs 2000.jpeg";
       }
 article {
       max-width: 600px;
