--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   h1 {
     font-size: 70px;
   }
-   img {
-    margin: 40px 0px 0px 0px;
-    border: 7px solid black;
-    border-radius: 20px;
-  }
+ 
 ul { 
   padding: 20px;
   background: black;
@@ -49,7 +45,7 @@ article {
 </head>
 
 <body>
-<header><img src="pngwave.png">
+<header>
 <h1>Wintersport</h1>
 <ul>
       <li><a href="Introductie.html">Introductie</a></li>
