--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style>
   header{
   text-align: center;
+    font-size: 50px;
   background: url("IMG-6674.jpg");
   background-size: cover;
   color: white;
