--- a/index.html
+++ b/index.html
@@ -2,29 +2,24 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
-  header{
   text-align: center;
-  background: url("IMG-6674.jpg");
+  background: url("http://dash.ga.co/assets/jeff-bg.png");
   background-size: cover;
   color: white;
   }
   a {color: white;
   }
   h1 {
-    font-size: 100px;
-  }
-  h2 {
     font-size: 70px;
   }
- 
-ul { 
-  padding: 20px;
+  ul { 
+  padding: 10px;
   background: black;
 }
 li {
   display: inline;
-padding: 0px 25px 0px 25px;
-  margin: 100px 0px 0px 0px;
+padding: 0px 10px 0px 10px;
+ 
 }
 article {
       max-width: 600px;
