--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
   text-align: center;
-  background: url("http://dash.ga.co/assets/jeff-bg.png");
+  background: url("IMG-6674.jpg");
   background-size: cover;
   color: white;
   }
@@ -13,7 +13,7 @@
     font-size: 70px;
   }
   ul { 
-  padding: 10px;
+  padding: 20px;
   background: black;
 }
 li {
