--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
+  header {
   text-align: center;
   background: url("IMG-6674.jpg");
   background-size: cover;
