--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ article {
 <body>
 <header>
 <h1>Wintersport</h1>
-
+  <h2>Welk land past het beste bij jou?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </h2>
 <ul>
       <li><a href="Introductie.html">Introductie</a></li>
       <li><a href="Frankrijk.html">Frankrijk</a></li>
