--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <link href="/pngwave.png/normalize.css" rel="stylesheet">
 <style>
-  header {
+header{
   text-align: center;
   background: url("IMG-6674.jpg");
   background-size: cover;
@@ -11,17 +11,28 @@
   a {color: white;
   }
   h1 {
+    font-size: 100px;
+  }
+  h2 {
     font-size: 70px;
   }
-  ul { 
+ 
+ul { 
   padding: 20px;
   background: black;
 }
 li {
   display: inline;
-padding: 0px 10px 0px 10px;
- 
+padding: 0px 25px 0px 25px;
 }
+   img {
+    margin: 40px 0px 0px 0px;
+    border: 7px solid black;
+    border-radius: 20px;
+  }
+
+
+
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
@@ -47,7 +58,8 @@ article {
 <body>
 <header>
 <h1>Wintersport</h1>
-  <h2>Welk land past het beste bij jou?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </h2>
+  <h2>Welk land past het beste bij jou?</h2>
+  <img src="pngwave.png">
 <ul>
       <li><a href="Introductie.html">Introductie</a></li>
       <li><a href="Frankrijk.html">Frankrijk</a></li>
