--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header{
   text-align: center;
   background: url("IMG-6674.jpg");
   background-size: cover;
-  color: white;
+  color: black;
   }
   a {color: white;
   }
@@ -27,7 +27,7 @@ padding: 0px 25px 0px 25px;
 }
    img {
     margin: 40px 0px 0px 0px;
-    border: 7px solid black;
+    border: 7px solid white;
     border-radius: 20px;
   }
 
