--- a/Introductie.html
+++ b/Introductie.html
@@ -1,11 +1,15 @@
 <html>
 <head>
 <style>
+      background {
+            color: black;
+      }
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      color: white;
      li {
         display: block;
         padding: 5px;
