--- a/Introductie.html
+++ b/Introductie.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <style>
-      background {
-            color: black;
+      html {
+            background: rgba(0,0,0);
       }
 article {
       max-width: 600px;
