--- a/Introductie.html
+++ b/Introductie.html
@@ -1,15 +1,15 @@
 <html>
 <head>
 <style>
-      html {
-            background: rgba(190,190,190);
-      }
+     
 article {
       max-width: 600px;
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
-      color: white;
+      color: black;
+      text-align:center;
+      }
      li {
         display: block;
         padding: 5px;
