--- a/Introductie.html
+++ b/Introductie.html
@@ -10,6 +10,9 @@ article {
       color: black;
       text-align:center;
       }
+     p{
+          text-align: center;
+     }
      li {
         display: block;
         padding: 5px;
