--- a/Introductie.html
+++ b/Introductie.html
@@ -2,8 +2,8 @@
 <head>
 <style>
      
-     html {
-          article: center;
+     body {
+         text-align : center;
      }
      
 article {
