--- a/Introductie.html
+++ b/Introductie.html
@@ -20,6 +20,10 @@ article {
   ul {
     font-size: 20px;
   }
+     img {
+          width: 200px;
+          height: 100px;
+     }
       </style>
 </head>
 <body>
