--- a/Introductie.html
+++ b/Introductie.html
@@ -23,6 +23,7 @@ article {
      img {
           width: 200px;
           height: 100px;
+          margin: 50px 0px 50px 0px;
      }
       </style>
 </head>
