--- a/Introductie.html
+++ b/Introductie.html
@@ -5,7 +5,7 @@
 
 article {
       max-width: 600px;
-      margin: 70px 0px 200px 375px;
+      margin: 70px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
       color: black;
@@ -23,6 +23,7 @@ article {
      img {
           width: 200px;
           height: 100px;
+          margin: 0px 0px 0px 100px
      }
       </style>
 </head>
