--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -2,10 +2,12 @@
 <head>
 <style>           
 article {
-      max-width: 600px;
-      margin: 50px 0px 200px 50px;
+    max-width: 600px;
+      margin: 180px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      color: black;
+      text-align: center;
       }
       ul {
     font-size: 20px;
