--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -12,6 +12,11 @@ article {
       ul {
     font-size: 20px;
   }
+      img {
+          width: 200px;
+          height: 200px;
+          margin: -610px 0px 0px 700px;
+     }
 </style>
 </head>
 <body>
