--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -20,6 +20,9 @@ article {
 </style>
 </head>
 <body>
+    <ul>
+            <li><a href="https://bram21.github.io/index.html">Terug naar hoofdpagina</a></li>
+    </ul>
 <img src="Les Arcs 2000.jpeg" width="600" height"100" object"left">
 <article>
   <h2>Frankrijk</h2>
