--- a/Frankrijk.html
+++ b/Frankrijk.html
@@ -23,7 +23,7 @@ article {
     <ul>
             <li><a href="https://bram21.github.io/index.html">Terug naar hoofdpagina</a></li>
     </ul>
-<img src="les arcs.jpeg">
+<img src="les arcs 1900.jpeg">
 <article>
   <h2>Frankrijk</h2>
   <p>Wintersport in Frankrijk staat bekend als een gebied voor de gevorderde skiër of snowboarder. Bovendien liggen de skigebieden een stuk hoger dan in vergelijkbare landen. In Frankrijk vind je voornamelijk lange afdalingen waar je lekker een stukje door kan skiën. De liften zijn gemiddeld minder nieuw dan in Oostenrijk maar dit zal je ook in de prijs van een ski pas terug zien, alhoewel de gemiddelde prijs van een skipas in Frankrijk ook zeker niet laag ligt. Als je naar Frankrijk gaat weet je eigenlijk wel zeker dat er genoeg sneeuw ligt dat komt doordat de skigebieden voornamelijk hooggelegen zijn. Mensen die kiezen om naar Frankrijk te gaan zijn vaak wel iets gevorderden, je hebt natuurlijk ook beginnerspistes maar die vind je meer in Oostenrijk. Als je voor de après-ski op wintersport gaat dan is Frankrijk niet de juiste bestemming voor jouw niet omdat het er niet is maar er zijn landen die dit veel meer hebben. In de Franse skigebieden vind je vaak kleine dorpjes op de piste terug zoals in Les Arcs 1600, Les Arcs 1700, Les Arcs 1950 en zelfs Les Arcs 2000.  
