--- a/Oostenrijk.html
+++ b/Oostenrijk.html
@@ -9,6 +9,11 @@ article {
       color: black;
       text-align: center;
       }
+     img {
+          width: 300px;
+          height: 300px;
+          margin: 50px 0px 0px 800px;
+     }
  ul {
     font-size: 20px;
   }
