--- a/Zwitserland.html
+++ b/Zwitserland.html
@@ -18,6 +18,9 @@ article {
 </style>
 </head>
 <body>
+        <ul>
+            <li><a href="https://bram21.github.io/index.html">Terug naar hoofdpagina</a></li>
+    </ul>
 <article>  
   <h2>Zwitserland</h2>
   <p>Zwitserland is het duurste skigebied in europa en daarom is het ook minder druk dan in andere landen. Maar Zwitserland heeft misschien wel de mooiste gebieden van de alpen door haar lange skipistes, maar het is ook heel erg geschikt voor families. In de meeste skigebieden in Zwitserland zijn de liften gelijkwaardig aan die van Oostenrijk erg nieuw dus. Zoals ik hierboven al had vermeld is Zwitserland gemiddeld het duurste wintersport land in europa daardoor is het voor de meeste mensen al een afvaller. Als je in Zwitserland gaat skiën is er altijd wel voldoende sneeuw aanwezig dit komt doordat je voornamelijk hoog in de alpen zit. In Zwitserland zijn heel veel luxe hotels waar je na het skiën aan het zwembad gaat liggen en daarna de sauna in, daardoor is Zwitserland meer voor de iets rustigere mensen die het liefst genieten van het skiën en de rust in het hotel. Het zal je ook niets verbazen dat de après-ski hier van heel laag niveau is. De skigebieden hebben een mooie mix tussen Frankrijk en Oostenrijk, er zijn mooie lange afdalingen die voor gevorderd zijn maar je hebt ook genoeg makkelijke blauwe afdalingen die je als beginner makkelijk kan nemen. </p>
