--- a/Zwitserland.html
+++ b/Zwitserland.html
@@ -6,6 +6,8 @@ article {
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      color: black;
+      text-align: center;
 }
         img {
           width: 700px;
