--- a/Italië.html
+++ b/Italië.html
@@ -6,6 +6,8 @@ article {
       margin: 50px 0px 200px 50px;
       padding: 20px 0p;
       font-size: 20px;
+      color: black;
+      text-align: center;
 }
        img {
         width: 682px;
@@ -18,6 +20,9 @@ article {
 </style>
 </head>
 <body>
+       <ul>
+            <li><a href="https://bram21.github.io/index.html">Terug naar hoofdpagina</a></li>
+    </ul>
 <article>
 <h2>Italië</h2>
   <p>De Italiaanse skigebieden worden door de nederlanders vaak vermeden want ze vinden het te ver rijden terwijl dat in de praktijk heel erg meevalt. Ze zeggen weleens als je in Italië bent wezen skiën wil je nooit anders, dat komt natuurlijk door het fantastische eten maar je hebt ook de mooie lange franse afdalingen. Als je via Oostenrijk naar Italië rijdt neem je de après-ski van Oostenrijk niet mee naar Italië, de après-ski in Italië is vergelijkbaar met die van Frankrijk. Italië is hooggelegen en dus ligt er in de juiste periodes voldoende sneeuw als dat niet het geval is dan maakt dat niet heel veel  uit de Italiaanse skigebieden zijn namelijk een kei in het maken van nepsneeuw. De skigebieden in Italië worden vaak vergeleken met Frankrijk wat niet onterecht is maar dat komt grotendeels door de pistes en de liften. Alleen is het eten in Italië wel een stuk beter dan dat in Frankrijk, maar dat is eigenlijk vanzelfsprekend. In Italië heb je een fantastisch uitzicht vanuit de pistes maar ook vanuit de hotels die op de pistes zitten. Die hotels op de pistes heb je er heel veel van, dat wordt ook wel een “ski in en ski out” dorpje genoemd. De prijs van een skipas kan je vergelijken met die van Frankrijk en Oostenrijk niet de duurste maar ook niet de goedkoopste. Uiteindelijk lijken de Italiaanse skigebieden veel op de Franse. </p>
